[gd_scene load_steps=3 format=3 uid="uid://pvd0n1pjgc3d"]

[ext_resource type="Script" path="res://AuthBox.gd" id="1"]

[sub_resource type="Theme" id="Theme_4rcec"]

[node name="AuthBox" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = SubResource("Theme_4rcec")
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 200)
layout_mode = 1
offset_right = 366.0
offset_bottom = 200.0

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(550, 200)
layout_mode = 0
offset_left = 300.0
offset_top = 200.0
offset_right = 900.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
alignment = 1

[node name="Info" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Bot Channel Options"
horizontal_alignment = 1

[node name="HeaderHbox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TokenButton" type="Button" parent="CenterContainer/VBoxContainer/HeaderHbox"]
layout_mode = 2
text = "Request new user token for bot account"

[node name="OAuthContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ChannelLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/OAuthContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Channel To Join"

[node name="AddChannelButton" type="Button" parent="CenterContainer/VBoxContainer/OAuthContainer"]
layout_mode = 2
toggle_mode = true
text = "Add"

[node name="RemoveChannelButton" type="Button" parent="CenterContainer/VBoxContainer/OAuthContainer"]
layout_mode = 2
text = "Remove"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TargetChannelOption" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetChannelLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Target Channel
"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_direction = 3
layout_mode = 2
text = "Close"
